fix: Lower z-index of post action container.

--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -100,7 +100,7 @@ html main {
   height: 200px;
   right: 0;
   padding: 1rem;
-  z-index: 10;
+  z-index: 1;
 }
 @media only screen and (max-width: 767px) {
   .post-container > .post-actions {
