--- a/server/resources/scss/components/post/_container.scss
+++ b/server/resources/scss/components/post/_container.scss
@@ -26,7 +26,7 @@
     height: 200px;
     right: 0;
     padding: 1rem;
-    z-index: 10;
+    z-index: 1;
 
     .buttons {
       height: 100%;
